# remotecompose-experiments

./: README.md
.github/workflows/: cpp.yml
docs/: SurfaceAPI-Proposal.md  VideoAPI-Proposal.md
docs/RemoteComposeIntroduction/: build.py  index.html
docs/RemoteComposeSpec/: index.html  remote_compose_player.js  remote_compose_spec.html  remote_compose_spec.json
players/compose/: .gitignore  README.md  settings.gradle.kts
players/compose/composeApp/: build.gradle.kts
players/compose/gradle/: libs.versions.toml
players/compose/remote-core/: build.gradle.kts
players/compose/remote-player/: build.gradle.kts
players/cpp/: .gitignore  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
players/cpp/.github/workflows/: ios.yml  macos-desktop.yml
players/cpp/apps/iosViewer/: .gitignore  README.md  build.sh  project.yml
players/cpp/apps/iosViewer/iosViewer/: ContentView.swift  Info.plist  iosViewerApp.swift
players/cpp/apps/iosViewer/iosViewer/Bridge/: RCMetalRenderer.h  RCMetalRenderer.mm  iosViewer-Bridging-Header.h
players/cpp/apps/iosViewer/iosViewer/Models/: Deck.swift  DeckLoader.swift  Slide.swift
players/cpp/apps/iosViewer/iosViewer/Presenter/: PresentationOverlay.swift  PresenterView.swift  RCSlideMetalView.swift  VideoSlideView.swift
players/cpp/apps/viewer/: AvfVideoPlayer.h  AvfVideoPlayer.mm  AvfVideoPlayerStub.cpp  CMakeLists.txt  CpuRenderBackend.h  MetalRenderBackend.h  MetalRenderBackend.mm  README.md  RenderBackend.h  WidgetHelper.h  WidgetHelper.mm  WidgetHelperStub.cpp  ZipArchive.h  main.cpp
players/cpp/docs/: PROGRESS.md
players/cpp/ios/: CMakeLists.txt  build.sh  ios.toolchain.cmake
players/cpp/lib/rccore/: CMakeLists.txt
players/cpp/lib/rccore/include/rccore/: CoreDocument.h  ExpressionEvaluator.h  IntegerExpressionEvaluator.h  LayoutSystem.h  OpcodeRegistry.h  Operation.h  Operations.h  PaintBundle.h  PaintContext.h  RemoteContext.h  TimeVariables.h  Utils.h  WireBuffer.h
players/cpp/lib/rccore/include/rccore/easing/: BounceCurve.h  CubicEasing.h  Easing.h  ElasticOutCurve.h  FloatAnimation.h  MonotonicCurveFit.h  SpringStopEngine.h  StepCurve.h  VelocityEasing.h
players/cpp/lib/rccore/include/rccore/operations/: AdvancedOperations.h  DrawArc.h  DrawCircle.h  DrawLine.h  DrawOperations.h  DrawOval.h  DrawRect.h  DrawRoundRect.h  DrawSector.h  FloatFormat.h  Header.h  LayoutOperations.h  PaintData.h  PathData.h  RootContentDescription.h  TextData.h
players/cpp/lib/rccore/src/: CoreDocument.cpp  ExpressionEvaluator.cpp  OpcodeRegistry.cpp  Operations.cpp  PaintBundle.cpp  RemoteContext.cpp  TimeVariables.cpp  Utils.cpp  WireBuffer.cpp
players/cpp/lib/rccore/src/operations/: AdvancedOperations.cpp  DrawOperations.cpp  Header.cpp  LayoutOperations.cpp
players/cpp/lib/rcskia/: CMakeLists.txt
players/cpp/lib/rcskia/include/rcskia/: SkiaPaintContext.h
players/cpp/lib/rcskia/src/: SkiaPaintContext.cpp
players/cpp/tools/rc2image/: CMakeLists.txt  main.cpp
players/cpp/tools/rc2json/: CMakeLists.txt  main.cpp
players/cpp/tools/scripts/: compare_images.sh
players/typescript/: .gitignore  BUILDING.md  README.md  compare-gold.mjs  package-lock.json  package.json  tsconfig.json
players/typescript/doc/: BYTE_VERIFICATION.md  EXPRESSION_ENGINE_INTERNALS.md  IMPLEMENTATION_STATUS.md  LAYOUT_OPERATIONS.md  REMOTE_CONTEXT.md
players/typescript/packaging/: README.md  build-standalone.sh  make_deck_site.py
players/typescript/src/: debug_entry.ts  node-entry.ts  rc2json.ts
players/typescript/src/core/: CompanionOperation.ts  CoreDocument.ts  DefaultSystemColors.ts  Operation.ts  Operations.ts  PaintContext.ts  PaintOperation.ts  RemoteClock.ts  RemoteComposeBuffer.ts  RemoteComposeState.ts  RemoteContext.ts  TimeVariables.ts  TouchListener.ts  VariableSupport.ts  WireBuffer.ts
players/typescript/src/core/operations/: BooleanConstant.ts  ColorAttribute.ts  ColorExpression.ts  ColorTheme.ts  ComponentValue.ts  ConditionalOperations.ts  DataDynamicListFloat.ts  DataListFloat.ts  DataListIds.ts  DataMapIds.ts  DataMapLookup.ts  DataOperations.ts  DrawArc.ts  DrawBase3.ts  DrawBase4.ts  DrawBase6.ts  DrawBitmap.ts  DrawBitmapInt.ts  DrawBitmapScaled.ts  DrawCircle.ts  DrawContent.ts  DrawLine.ts  DrawOval.ts  DrawPath.ts  DrawRect.ts  DrawRoundRect.ts  DrawSector.ts  DrawText.ts  DrawTextAnchored.ts  DrawTextOnPath.ts  DrawToBitmap.ts  DrawTweenPath.ts  FloatExpression.ts  Header.ts  IdLookup.ts  IntegerConstant.ts  IntegerExpression.ts  LongConstant.ts  MatrixConstant.ts  MatrixExpression.ts  (+21 more)
players/typescript/src/core/operations/layout/: CanvasContent.ts  Component.ts  Container.ts  ContainerEnd.ts  LayoutComponent.ts  LayoutComponentContent.ts  LoopOperation.ts  RootLayoutComponent.ts
players/typescript/src/core/operations/layout/managers/: BoxLayout.ts  CanvasLayout.ts  CollapsibleColumnLayout.ts  CollapsiblePriority.ts  CollapsibleRowLayout.ts  ColumnLayout.ts  CoreText.ts  Custom.ts  FitBoxLayout.ts  FlowLayout.ts  ImageLayout.ts  LayoutManager.ts  (+3 more)
players/typescript/src/core/operations/loom/: ExpansionContext.ts  LoomManager.ts  LoomWireBuffer.ts  PatternOperations.ts  RemapContext.ts  nestContainers.ts
players/typescript/src/core/operations/paint/: PaintBundle.ts
players/typescript/src/core/operations/utilities/: AnimatedFloatExpression.ts  ImageScaling.ts  IntFloatMap.ts  IntIntMap.ts  IntMap.ts  Matrix.ts  MatrixOperations.ts  StringUtils.ts  ToneSynthesizer.ts
players/typescript/src/core/shader/: AgslTokenizer.ts  AgslTranspiler.stress.ts  AgslTranspiler.test.ts  AgslTranspiler.ts  _test_cal.ts
players/typescript/src/web/: CanvasPaintContext.ts  RcPlayerElement.ts  WebRemoteContext.ts  main.ts
players/typescript/src/web/shader/: WebGLShaderRenderer.ts  shader-test-entry.ts
players/typescript/vscode-extension/: README.md  build.sh  package.json  tsconfig.json
players/typescript/vscode-extension/src/: RcEditorProvider.ts  extension.ts
players/typescript/web-player/: index.html  serve.mjs  standalone-template.html
samples/: balls_animation_example.rc  canvas.rc
(+33 files in other folders)
